components/Navbar/Navbar.module.css
.Container {
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 998;
}

.Content {
  align-items: center;
  color: #fff;
  display: flex;
  height: var(--navbar-height);
  justify-content: space-between;
  margin: auto;
  max-width: var(--page-max-width);
  padding: var(--spacing-base) var(--spacing-loose);
  text-transform: uppercase;
  transition: background 500ms;
  width: 100%;
}

.Title {
  font-size: var(--font-navbar);
}

.StaticLogoContainer {
  left: 50%;
  position: absolute;
  top: var(--spacing-base);
  transform: translate3d(-50%, 0, 0);
}

.LinksContainer {
  flex: 1 0 auto;
}

.Link {
  font-size: var(--font-navbar);
  opacity: 0.6;
  position: relative;
  transition: opacity 250ms;
}

.Link:hover {
  opacity: 1;
}

.Link-active {
  opacity: 1;
}

.Link-active::after {
  background: var(--color-white);
  bottom: -5px;
  content: " ";
  height: 1px;
  left: calc(var(--spacing-base) / 2 * -1);
  position: absolute;
  width: calc(100% + var(--spacing-base));
}

